--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,14 @@
                 <ul class="navLinkList work-sans">
                     <li><a href="/">Home</a></li>
                     <li><a href="/blogs">Blog</a></li>
-                    <li><a href="/author">Profile</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">Profile <i class="fa-solid fa-circle-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/author">My Profile</a></li>
+                            <li><a href="/settings">Settings</a></li>
+                            <li><a href="#" id="logout-link">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -190,4 +197,30 @@
             </ul>
         </div>
     </footer>
+    <script>
+        document.getElementById('logout-link').addEventListener('click', async function (e) {
+                e.preventDefault();
+
+                const confirmLogout = confirm("Are you sure you want to logout?");
+                if (!confirmLogout) return;
+
+                try {
+                    const response = await fetch('/auth/logout', {
+                        method: 'POST',
+                        credentials: 'include'
+                    });
+
+                    if (response.ok) {
+                        alert('Logged out successfully!');
+                        window.location.href = '/';
+                    } else {
+                        const error = await response.text();
+                        alert('Logout failed: ' + error);
+                    }
+                } catch (err) {
+                    console.error('Logout error:', err);
+                    alert('Something went wrong.');
+                }
+            });
+    </script>
 </html>
