fixed session authentication issues

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -105,8 +105,9 @@
                             </a>
                         </div>
                     <%}%>
-                    <%}%>
+                    <%}else{%>
                     <h1>No Posts yet</h1>
+                    <%}%>
                     <!--
                     <div class="blogCard">
                         <div class="blogCardImage"><img src="../images/cardImage.png"></div>
