--- a/views/create_blog.ejs
+++ b/views/create_blog.ejs
@@ -48,6 +48,11 @@
                         <br>
                         <input type="text" id="blogTitle" name="title" value="<%=post.title%>">
                     </label>
+                    <label>
+                        <h4>Blog Banner url:</h4>
+                        <br>
+                        <input type="" id="blogBanner" name="banner" value="<%=post.banner_image_url%>">
+                    </label>
                     <label for="blogTags">
                         <h4>Tags:</h4>
                         <br>
@@ -74,6 +79,11 @@
                         <h4>Title:</h4>
                         <br>
                         <input type="text" id="blogTitle" name="blogTitle" placeholder="Enter your blog title">
+                    </label>
+                    <label>
+                        <h4>Blog Banner url:</h4>
+                        <br>
+                        <input type="url" id="blogBanner" name="blogBanner" placeholder="Enter blog banner url here">
                     </label>
                     <label for="blogTags">
                         <h4>Tags:</h4>
