--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -124,7 +124,8 @@ a {
 .heroContent>img {
     width: 1200px;
     height: 600px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 .heroDiv {
@@ -247,7 +248,15 @@ a {
     object-fit: contain;*/
     width: 100%;
     height: 240px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.blogCardImage img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    display: block;
 }
 
 .blogCard h3 {
@@ -543,6 +552,7 @@ a {
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .commentHeader .userInfo {
@@ -705,6 +715,7 @@ a {
     height: 30px;
     border-radius: 50%;
     margin-right: 8px;
+    object-fit: cover;
 }
 
 .replyHeader .userInfo {
@@ -831,7 +842,29 @@ a {
     margin-bottom: 15px;
 }
 
-.authorDetails img {
+.authorImage .profileUpload {
+    display: none;
+}
+
+.authorImage:hover .profileUpload {
+    display: block;
+}
+
+.profileUpload {
+    flex: 1;
+    background: white;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: #2563eb;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.authorImage img {
     border-radius: 50%;
     width: 80px;
     height: 80px;
@@ -869,6 +902,37 @@ a {
 
 .authorSocials a:hover {
     background: #bbb;
+}
+
+.blogGrid.disable {
+    display: none;
+}
+
+.draftTabs {
+    display: flex;
+    margin-bottom: 48px;
+    padding-left: 140px;
+    padding-right: 140px;
+}
+
+.tab-button.disable {
+    background: none;
+    color: #64748b;
+    box-shadow: none;
+}
+
+.tab-button {
+    flex: 1;
+    background: white;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: #2563eb;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .blogCreationContainer {
