--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
             <div class="heroContainer">
                 <a href="blog/<%=featuredPost.blog_id%>">
                 <div class="heroContent">
-                    <img src="/images/heroImage.png">
+                    <img src="<%=featuredPost.banner_image_url%>">
                     <div class="heroDiv">
                         <div class="tags">
                             <%for (const tag of featuredPost.tags.split(',').map(x=>x.trim())){%>
@@ -74,7 +74,7 @@
                 <%for(let post of paginatedPosts){%>
                 <div class="blogCard">
                     <a href='blog/<%=post.blog_id%>' class="blogCardLink">
-                    <div class="blogCardImage"><img src="../images/cardImage.png"></div>
+                    <div class="blogCardImage"><img src="<%=post.banner_image_url%>"></div>
                     
                     <!--<div class="tag">
                         <p>Technology</p>
